final edits and experiments

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@
     margin-bottom: 30px;
     text-align: center;
     margin-top: 15px;
-    color: indigo;
+    color: indianred;
+    text-shadow: forestgreen 1px 1px;
 }
 
 #main_block {
