--- a/style/style.css
+++ b/style/style.css
@@ -179,12 +179,14 @@ form {
 #cart_content {
     margin-top: 10px;
     padding: 5px;
-    border: 1px solid #060;
+    /*border: 1px solid #060;*/
+    margin-bottom: 20px;
 }
 .item_box {
     border: 1px solid #999;
     margin-bottom: 10px;
     padding: 5px;
+    text-align: center;
 }
 .shopping_list {
     width: 100%;
@@ -195,4 +197,51 @@ form {
 .shopping_list th {
     padding: 10px;
     border: 1px solid #AAAAAA;
+}
+
+/* Модальный (фон) */
+.modal {
+    display: none; /* Скрыто по умолчанию */
+    position: fixed; /* Оставаться на месте */
+    z-index: 1; /* Сидеть на вершине */
+    left: 0;
+    top: 0;
+    width: 100%; /* Полная ширина */
+    height: 100%; /* Полная высота */
+    overflow: auto; /* Включите прокрутку, если это необходимо */
+    background-color: rgb(0,0,0); /* Цвет запасной вариант */
+    background-color: rgba(0,0,0,0.4); /* Черный с непрозрачностью */
+}
+
+/* Модальное содержание/коробка */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% сверху и по центру */
+    padding: 20px;
+    border: 1px solid #888;
+    max-width: 500px;
+}
+
+/* Кнопка закрытия */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#myBtn {
+    margin-bottom: 50px;
+}
+
+.final {
+    max-width: 500px;
+    margin: 0 auto;
 }
